# snapm

./: .gitignore  .packit.yaml  .pylintrc  .readthedocs.yaml  AI_POLICY.md  CONTRIBUTING.md  COPYING.stratislib  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  snapm.spec  test_requirements.txt
.github/workflows/: container.yaml  snapm.yml
container_tests/: .gitignore  Containerfile  Makefile  badkeys.json  test.json
container_tests/tests/: __init__.py  test_schedule.py  test_timers.py
doc/: conf.py  index.rst  modules.rst  snapm.rst  user_guide.rst
doc/_static/css/: workaround.css
etc/snapm/: snapm.conf
etc/snapm/plugins.d/: lvm2-cow.conf  lvm2-thin.conf  stratis.conf
etc/snapm/schedule.d/: README
man/man5/: snapm-plugins.d.5  snapm-schedule.d.5  snapm.conf.5
man/man8/: snapm.8
scripts/: difftest.py  progtest.py  setpaths.sh
snapm/: __init__.py  _progress.py  _snapm.py  command.py  progress.py  report.py
snapm/_fsdiff/: __init__.py  changes.py  contentdiff.py  engine.py  filetypes.py  fsdiffer.py  options.py  treewalk.py
snapm/fsdiff/: __init__.py  cache.py  changes.py  contentdiff.py  difftypes.py  engine.py  filetypes.py  fsdiffer.py  options.py  tree.py  treewalk.py
snapm/manager/: __init__.py  _boot.py  _calendar.py  _loader.py  _manager.py  _mounts.py  _schedule.py  _signals.py  _timers.py  boot.py  calendar.py  signals.py
snapm/manager/plugins/: __init__.py  _plugin.py  lvm2.py  stratis.py
snapm/manager/plugins/stratislib/: __init__.py  _constants.py  _data.py  _environment.py  _errors.py  _introspect.py  _stratisd_constants.py  _stratisd_version.py
systemd/: snapm-create@.service  snapm-create@.timer  snapm-gc@.service  snapm-gc@.timer
systemd/tmpfiles.d/: snapm.conf
tests/: __init__.py  _util.py  test_boot.py  test_calendar.py  test_command.py  test_loader.py  test_lvm2.py  test_manager.py  test_manager_blockdevs.py  test_mounts.py  test_plugin.py  test_progress.py  test_report.py  test_scheduler.py  test_snapm.py  test_stratis.py
tests/boot/boom/: boom.conf
tests/fsdiff/: _util.py  test_cache.py  test_changes.py  test_contentdiff.py  test_engine.py  test_filetypes.py  test_fsdiffer.py  test_options.py  test_tree.py  test_treewalk.py
tests/lvm/: lvm.conf
tests/lvm-nodevicesfile/: lvm.conf
