[project]
name = "snapm"
version = "0.3.0"
license = { file="COPYING" }
authors = [
  { name="Bryn M. Reeves", email="bmr@redhat.com" },
]
description = "Snapshot Manager"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "boom-boot >= 1.6.4",
]

[project.urls]
Homepage = "https://github.com/snapshotmanager/snapm"
Issues = "https://github.com/snapshotmanager/snapm/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

