[project]
name = "snapm"
version = "0.4.0"
license = { text="GPL-2.0-only AND Apache-2.0" }
authors = [
  { name="Bryn M. Reeves", email="bmr@redhat.com" },
]
description = "Snapshot Manager"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "boom-boot >= 1.6.4",
    "dbus-client-gen >= 0.4",
    "dbus-python-client-gen >= 0.7",
    "justbytes >=0.14",
    "packaging",
    "python-dateutil",
    "wcwidth",
]

[project.urls]
Homepage = "https://github.com/snapshotmanager/snapm"
Issues = "https://github.com/snapshotmanager/snapm/issues"

[build-system]
requires = [
    "wheel",
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
