[project]
name = "snapm"
authors = [
  { name="Bryn M. Reeves", email="bmr@redhat.com" },
]
description = "Snapshot Manager"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["license", "dependencies", "version" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/snapshotmanager/snapm"
Issues = "https://github.com/snapshotmanager/snapm/issues"

[build-system]
requires = [
    "pytest",
    "setuptools>=53",
]
build-backend = "setuptools.build_meta"
