[metadata]
name = snapm
author = Bryn M. Reeves
author_email = bmr@redhat.com
url = https://github.com/snapshotmanager/snapm
description = Snapshot Manager
license = GPL-2.0-only
license_file = COPYING
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: snapm.__version__
platforms = 
    Linux
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
scripts = bin/snapm
install_requires =
    boom-boot >= 1.6.4

[options.packages.find]
exclude =
    tests*
