[metadata]
name = snapm
author = Bryn M. Reeves
author_email = bmr@redhat.com
url = https://github.com/snapshotmanager/snapm
description = Snapshot Manager
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: snapm.__version__
platforms = 
    Linux
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
scripts = bin/snapm
install_requires =
    boom-boot >= 1.6.0
    dbus-client-gen >= 0.5
    dbus-python-client-gen >= 0.8
    justbytes >=0.15
    packaging
    python-dateutil
    wcwidth

[options.packages.find]
exclude =
    tests*

[flake8]
extend-ignore = E501, E203
exclude = .git,__pycache__,build,dist
